feat: Add dynamic tax/fee disclaimers and Stripe security messaging with UI improvements
FEATURES:
- Dynamic price disclaimers based on tax_mode (inclusive/exclusive/none) and fee_enabled configurations
- Stripe security disclaimer with privacy policy link displayed on payment selection
- Conditional UI rendering for tax and fee rows based on order configuration
- Helper utility for centralized disclaimer logic with i18n support

BACKEND INTEGRATION:
- Added tax_mode and fee_enabled to /configurations endpoint response
- Exposed TAX_MODE environment variable through global configuration API

TRANSLATIONS:
- Added 6 price disclaimer variants in all 6 languages (en, fr, es, de, ro, hi):
  * inclusive_with_fees: Prices include taxes, fees apply at checkout
  * inclusive_no_fees: Prices are final and include all taxes
  * exclusive_with_fees: Prices exclude taxes and transaction fees
  * exclusive_no_fees: Prices exclude taxes
  * none_with_fees: Transaction fees apply at checkout
  * none_no_fees: Prices displayed are final
- Added Stripe security disclaimer in all 6 languages explaining secure processing

UI/UX IMPROVEMENTS:
- BundleDetail: Hide price details section completely when fees are off AND tax is inclusive
- Checkout Order Summary: Hide subtotal row when fees are off AND tax is inclusive
- PaymentFlow: Added blue info box with Stripe security message after payment method selection
- OrderReceipt: Conditionally show/hide fee column and tax row based on order configuration
- Proper tax calculation in checkout based on tax_mode (exclusive adds VAT, inclusive/none includes it)

TECHNICAL CHANGES:
- Created priceDisclaimerHelper.js utility reading from sessionStorage configurations
- Updated Checkout.jsx with calculateOrderTotal() function respecting tax_mode
- Added tax_mode and fee_enabled fields to TaxesResponse and PaymentIntentResponse schemas
- Updated PaymentFlow component to conditionally display Stripe disclaimer for card payments only
- Modified OrderRe

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -442,7 +442,8 @@
     "paymentProcessingError": "Zahlung kann nicht verarbeitet werden. Bitte IT-Support kontaktieren.",
     "paymentConfirmationFailed": "Zahlungsbestätigung fehlgeschlagen",
     "paymentMethod": "Zahlungsmethode",
-    "failedToLoadPaymentInputs": "Zahlungseingaben konnten nicht geladen werden. Bitte später erneut versuchen"
+    "failedToLoadPaymentInputs": "Zahlungseingaben konnten nicht geladen werden. Bitte später erneut versuchen",
+    "securityDisclaimer": "Zahlungen werden sicher über Stripe.com verarbeitet. ChillSim speichert keine Kartendaten."
   },
   "planType": {
     "Data only": "Nur Daten"
@@ -459,6 +460,12 @@
   },
   "activity_policy": "Der Gültigkeitszeitraum beginnt, wenn sich die eSIM mit einem unterstützten Netzwerk verbindet.",
   "price_details": "Angezeigte Preise ohne Steuern und Transaktionsgebühren.",
+  "price_details.inclusive_with_fees": "Angezeigte Preise inkl. Steuern. Transaktionsgebühren fallen beim Bezahlen an",
+  "price_details.inclusive_no_fees": "Angezeigte Preise sind Endpreise und inkl. aller Steuern",
+  "price_details.exclusive_with_fees": "Angezeigte Preise ohne Steuern und Transaktionsgebühren",
+  "price_details.exclusive_no_fees": "Angezeigte Preise ohne Steuern",
+  "price_details.none_with_fees": "Transaktionsgebühren fallen beim Bezahlen an",
+  "price_details.none_no_fees": "Angezeigte Preise sind Endpreise",
   "terms": {
     "failedToLoadTermsData": "AGB konnten nicht geladen werden",
     "termsAndConditions": "AGB"
